trybuild_tests/1_70/test_compile_fail_two.stderr
error[E0271]: type mismatch resolving `<UInt<UInt<UTerm, B1>, B1> as IsLessOrEqual<UInt<UInt<UTerm, B1>, B0>>>::Output == B1`
  --> trybuild_tests/1_70/test_compile_fail_two.rs:24:51
   |
24 |     let (new_secret, returned_value) = new_secret.expose_secret(|exposed_secret| {
   |                                                   ^^^^^^^^^^^^^ expected `B1`, found `B0`
   |
note: required by a bound in `sosecrets_rs::traits::ExposeSecret::Next`
  --> src/traits.rs
   |
   |         Sum<EC, U1>: Unsigned + IsLessOrEqual<MEC, Output = True> + Add<U1>;
   |                                                    ^^^^^^^^^^^^^ required by this bound in `ExposeSecret::Next`
